# GameCpp

./: CMakeLists.txt  Main.cpp  README.md  build_and_run.sh
src/: Helper.cpp  Helper.h  LTexture.cpp  LTexture.h  Main.cpp  Static.h
